CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (game)

SET (game_SOURCES
	Light.cpp
	anim/Anim.cpp
	anim/Anim_Blend.cpp
	anim/Anim_Import.cpp
	anim/Anim_Testmodel.cpp
	Game_local.cpp
	Pvs.cpp
	Misc.cpp
	MultiplayerGame.cpp
	script/Script_Program.cpp
	script/Script_Thread.cpp
	script/Script_Interpreter.cpp
	script/Script_Compiler.cpp
	Entity.cpp
	Actor.cpp
	GameEdit.cpp
	Target.cpp
	Trigger.cpp
	ai/AI_Vagary.cpp
	ai/AAS.cpp
	ai/AAS_routing.cpp
	ai/AI_pathing.cpp
	ai/AAS_debug.cpp
	ai/AI_events.cpp
	ai/AAS_pathing.cpp
	ai/AI.cpp
	SecurityCamera.cpp
	PlayerIcon.cpp
	AF.cpp
	WorldSpawn.cpp
	EndLevel.cpp
	Projectile.cpp
	Player.cpp
	Fx.cpp
	SmokeParticles.cpp
	Camera.cpp
	physics/Physics_RigidBody.cpp
	physics/Physics_AF.cpp
	physics/Physics_Parametric.cpp
	physics/Force_Spring.cpp
	physics/Physics_Player.cpp
	physics/Force.cpp
	physics/Force_Field.cpp
	physics/Physics_Base.cpp
	physics/Physics_StaticMulti.cpp
	physics/Physics_Actor.cpp
	physics/Clip.cpp
	physics/Push.cpp
	physics/Force_Constant.cpp
	physics/Force_Drag.cpp
	Item.cpp
	PlayerView.cpp
	Sound.cpp
	Weapon.cpp
	Mover.cpp
	BrittleFracture.cpp
	IK.cpp
	gamesys/Class.cpp
	gamesys/Event.cpp
	gamesys/DebugGraph.cpp
	gamesys/TypeInfo.cpp
	gamesys/SysCvar.cpp
	gamesys/SysCmds.cpp
	gamesys/SaveGame.cpp
	gamesys/Callbacks.cpp
	AFEntity.cpp
	Game_network.cpp
	Moveable.cpp)

ADD_LIBRARY (game
	${game_SOURCES})
